# basic-compressor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
compressor/: __init__.py  __main__.py  app.py
compressor/algorithms/: __init__.py  bitstream.py  huffman.py  lossy.py  lzw.py  shannon_fano.py
examples/: rfc2151.txt
tests/: test_round_trip.py
